--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <a href="#">Your Logo</a>
+                    <a href="#">IVY.INTERIORS </a>
                 </div>
                 <ul class="nav-links">
                     <li><a href="#hero">Home</a></li>
