add new prorject

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                     <img src="project_3.jpg" alt="Project 3">
                     <h3>Cozy Kitchen</h3>
                 </div>
+                <div class="project">
+                    <img src="project_4.jpg" alt="Project 3">
+                    <h3>modern home</h3>
+                </div>
             </div>
             <a href="portfolio.html" class="cta-btn">View Portfolio</a>
         </div>
