--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <h2>Our Services</h2>
             <div class="services-grid">
                 <div class="service">
-                    <img src="service1.jpg" alt="Service 1">
-                    <h3>Residential Design</h3>
+                    <img src="project_4.jpg" alt="Service 1">
+                    <h3>Residential modern Design</h3>
                     <p>Transforming your home into a haven of comfort and style.</p>
                 </div>
                 <div class="service">
