--- a/index.html
+++ b/index.html
@@ -112,24 +112,25 @@
             </div>
         </div>
     </section>
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <div class="contact-form">
-                <form action="#" method="POST">
-                    <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
-                    <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
-                    <button type="submit">Send Message</button>
-                </form>
-            </div>
-            <div class="contact-info">
-                <p>123 Main Street, City, Country</p>
-                <p>Email: info@example.com</p>
-                <p>Phone: +1 234 567 890</p>
-            </div>
+<section id="contact" class="contact">
+    <div class="container">
+        <h2>Contact Us</h2>
+        <div class="contact-form">
+            <form action="send_mail.php" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
         </div>
-    </section>
+        <div class="contact-info">
+            <p>123 Main Street, City, Country</p>
+            <p>Email: info@example.com</p>
+            <p>Phone: +1 234 567 890</p>
+        </div>
+    </div>
+</section>
+
     
     <footer>
         <div class="container">
