--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
             </form>
         </div>
         <div class="contact-info">
-            <p>123 Main Street, City, Country</p>
-            <p>Email: info@example.com</p>
-            <p>Phone: +1 234 567 890</p>
+            <p>Manama ,Bahrain </p>
+            <p>Email: ivy.interiors.s@gmail.com </p>
+            <p>Phone: +97333162244</p>
         </div>
     </div>
 </section>
