--- a/index.html
+++ b/index.html
@@ -196,3 +196,40 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
     echo "Invalid request method.";
 }
 ?>
+<?php
+use PHPMailer\PHPMailer\PHPMailer;
+use PHPMailer\PHPMailer\Exception;
+
+require 'vendor/autoload.php';
+
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+    $name = htmlspecialchars($_POST['name']);
+    $email = htmlspecialchars($_POST['email']);
+    $message = htmlspecialchars($_POST['message']);
+
+    $mail = new PHPMailer(true);
+    try {
+        $mail->isSMTP();
+        $mail->Host = 'smtp.example.com';
+        $mail->SMTPAuth = true;
+        $mail->Username = 'your_email@example.com';
+        $mail->Password = 'your_email_password';
+        $mail->SMTPSecure = PHPMailer::ENCRYPTION_STARTTLS;
+        $mail->Port = 587;
+
+        $mail->setFrom($email, $name);
+        $mail->addAddress('m_raouf_7@hotmail.com');
+
+        $mail->isHTML(false);
+        $mail->Subject = "Contact Form Submission from $name";
+        $mail->Body = "Name: $name\nEmail: $email\n\nMessage:\n$message";
+
+        $mail->send();
+        echo 'Message sent successfully!';
+    } catch (Exception $e) {
+        echo "Failed to send message. Mailer Error: {$mail->ErrorInfo}";
+    }
+} else {
+    echo "Invalid request method.";
+}
+?>
