--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="services-grid">
                 <div class="service">
                     <img src="project_4.jpg" alt="Service 1">
-                    <h3>Residential modern Design</h3>
+                    <h3>VIP Aircraft modern Design</h3>
                     <p>Transforming your home into a haven of comfort and style.</p>
                 </div>
                 <div class="service">
