--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="service">
                     <img src="project_4.jpg" alt="Service 1">
                     <h3>VIP Aircraft modern Design</h3>
-                    <p>Transforming your home into a haven of comfort and style.</p>
+                    <p>Transforming your Aircraft into a haven of comfort and style.</p>
                 </div>
                 <div class="service">
                     <img src="service2.jpg" alt="Service 2">
