--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h3>Cozy Kitchen</h3>
                 </div>
                 <div class="project">
-                    <img src="project_4.jpg" alt="Project 3">
+                    <img src="project.jpg" alt="Project 3">
                     <h3>modern home</h3>
                 </div>
             </div>
