--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
         </div>
     </section>
 </body>
-</html><?php
+</html>
+<?php
 if ($_SERVER["REQUEST_METHOD"] == "POST") {
     $name = htmlspecialchars($_POST['name']);
     $email = htmlspecialchars($_POST['email']);
