--- a/index.html
+++ b/index.html
@@ -170,3 +170,14 @@
                 <button type="submit">Send Message</button>
             </form>
         </div>  
+<form action="mailto:info@example.com" method="GET">
+<div>
+  <input type="text" placeholder="Subject" name="subject" required />
+</div>
+<div>
+  <textarea placeholder="Your message" name="body" required></textarea>
+</div>
+<div>
+  <button type="submit">Send a message</button>
+</div>
+</form>
