--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="container">
         <h2>Contact Us</h2>
         <div class="contact-form">
-            <form action="send_mail.php" method="POST">
+            
                 <form action="mailto:m_raouf_7@hotmail.com" method="GET">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
@@ -170,7 +170,7 @@
                 <button type="submit">Send Message</button>
             </form>
         </div>  
-<form action="mailto:info@example.com" method="GET">
+<form action="mailto:ivy.interiors.s@gmail.com" method="GET">
 <div>
   <input type="text" placeholder="Subject" name="subject" required />
 </div>
