--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
         <h2>Contact Us</h2>
         <div class="contact-form">
             
-                <form action="mailto:m_raouf_7@hotmail.com" method="GET">
+                <form action="mailto:ivy.interiors.s@gmail.com" method="GET">
+                    <form action="send_mail.php" method="POST">  
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
