--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="container">
         <h2>Contact Us</h2>
         <div class="contact-form">
-            <form action="mailto:ivy.interiors.s@gmail.com" method="POST">
+            <form action="send_mail.php" method="POST"> method="POST">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
