--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
                 </div>
             </div>
         </div>
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Contact Form</title>
+</head>
     </section>
 <section id="contact" class="contact">
     <div class="container">
